<resources>
    <string name="app_name">어썸블로그</string>
    <string name="sign_in_with_google">구글로 로그인</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="menu">더보기</string>
    <string name="more">더보기 ...</string>
    <string name="copy_link">링크 복사하기</string>
    <string name="copy_link_completed">링크가 클립보드에 복사됐습니다.</string>
    <string name="open_in_browser">페이지 방문하기</string>
    <string name="share">공유하기</string>
    <string name="all">ALL</string>
    <string name="dev">DEVELOPER</string>
    <string name="tech_company">TECH COMPANY</string>
    <string name="insightful">INSIGHTFUL</string>
    <string name="favorites_1">FAVORITES</string>
    <string name="favorites_2">즐겨찾기</string>
    <string name="empty_favorites">즐겨찾기 한 글이 없습니다.</string>
    <string name="recently_read_1">RECENTLY READ</string>
    <string name="recently_read_2">최근 읽은 글</string>
    <string name="empty_recently_read">최근 읽은 글이 없습니다.</string>
    <string name="settings_1">SETTINGS</string>
    <string name="settings_2">설정</string>
    <string name="settings_notification">알림</string>
    <string name="settings_digest">새 소식 알림 받기</string>
    <string name="settings_digest_description">매일 아침 9시와 저녁 7시 즈음에 새로운 소식에 대한 알림이 전송됩니다.</string>
    <string name="settings_silent">무음으로 알림 받기</string>
    <string name="settings_about">정보</string>
    <string name="settings_version">어썸블로그 버전 %1$s</string>
    <string name="settings_version_description">다운로드해 주셔서 감사합니다. 피드백 및 문의사항은 플레이 스토어 또는 GitHub 페이지에 남겨주세요.</string>
    <string name="settings_github">GitHub 방문하기</string>
    <string name="settings_donate">개발팀 후원하기</string>
    <string name="settings_donate_description">커피 한 잔으로 개발팀에게 꿈과 희망을 전달하세요.</string>
    <string name="settings_donate_empty">구매할 수 있는 항목이 없습니다.</string>
    <string name="error_title">이런!</string>
    <string name="error_unknown_feed">피드 정보를 받는 도중 에러가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_invalid_link">이동할 수 없는 웹 사이트 주소입니다.</string>
    <string name="error_sign_in">로그인 도중 문제가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="digest_title">새로운 소식 %1$d개</string>
    <string name="digest_message_1">\'%1$s\' 소식이 있습니다.</string>
    <string name="digest_message_2">\'%1$s\', \'%2$s\' 소식이 있습니다.</string>
    <string name="digest_message_3">\'%1$s\', \'%2$s\', \'%3$s\' 소식이 있습니다.</string>
    <string name="digest_message_4">\'%1$s\', \'%2$s\', \'%3$s\' 외 %4$d개의 소식이 있습니다.</string>
    <string name="fresh_entries_title_0">새로운 \'%1$s\' 소식이 있습니다.</string>
    <string name="fresh_entries_title_1">\'%1$s\' 외 %2$d개의 새로운 소식이 있습니다.</string>
    <string name="previous_entry">이전 글</string>
    <string name="next_entry">다음 글</string>
    <string name="author_entries_1">블로거의 다른 글</string>
    <string name="author_entries_2">블로거의 글</string>
    <string name="search_1">SEARCH</string>
    <string name="search_2">Search</string>
    <string name="search_3">제목, URL, 작성자 이름으로\n 검색합니다.</string>
    <string name="empty_search_results">검색 결과가 없습니다.</string>
    <string name="shortcut_search">Search</string>
    <string name="shortcut_favorites">Favorites</string>
    <string name="shortcut_history">Recently Read</string>
    <string name="error_billing_1">결제 중 에러가 발생했습니다.</string>
    <string name="error_billing_2">네트워크 연결이 끊어졌습니다.</string>
    <string name="error_billing_3">해당 요청을 지원하지 않는 Billing API입니다.</string>
    <string name="error_billing_4">요청한 제품을 구매할 수 없습니다.</string>
    <string name="error_billing_5">API에 잘못된 파라미터가 전달되었습니다.</string>
    <string name="error_billing_6">API 작업 중 오류가 발생했습니다.</string>
    <string name="error_billing_7">해당 아이템을 이미 소유하고 있어 구매에 실패했습니다.</string>
    <string name="error_billing_8">해당 아이템을 소유하고 있지 않아 소비에 실패했습니다.</string>
</resources>
