<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer"
    android:padding="24dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="26dp"
        android:paddingBottom="24dp"
        android:src="@drawable/logo"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        style="@style/AppWidget.Selectable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/drawer_title"
            android:textSize="22sp"
            android:text="@string/all"
            android:background="@drawable/drawer_title"
            tools:text="ALL"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        style="@style/AppWidget.Selectable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/drawer_title"
            android:textSize="22sp"
            android:text="@string/dev"
            android:background="@drawable/drawer_title"
            tools:text="DEVELOPER"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        style="@style/AppWidget.Selectable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/drawer_title"
            android:textSize="22sp"
            android:text="@string/tech_company"
            android:background="@drawable/drawer_title"
            tools:text="TECH COMPANY"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/insightful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        style="@style/AppWidget.Selectable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/drawer_title"
            android:textSize="22sp"
            android:text="@string/insightful"
            android:background="@drawable/drawer_title"
            tools:text="INSIGHTFUL"/>
    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:text="@string/recently_read_1"
        style="@style/AppWidget.Selectable"
        tools:text="INSIGHTFUL"/>
</LinearLayout>