<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:paddingTop="12dp"
    android:paddingBottom="24dp"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/author_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:paddingBottom="18dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:text="@string/author_entries_1"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="12dp"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/black_15"
        android:layout_marginBottom="14dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/previous"
        style="@style/AppWidget.Selectable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="26dp"
        android:paddingTop="16dp"
        android:paddingRight="26dp"
        android:paddingBottom="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_entry"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/previous_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:text="어썸블로그 괴발기" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/next"
        style="@style/AppWidget.Selectable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="26dp"
        android:paddingTop="16dp"
        android:paddingRight="26dp"
        android:paddingBottom="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_entry"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/next_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:text="안드로이드 미립자 뉴스" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>